Fixed layout issues. Finished styling the button, added rounded corners.

--- a/styles.css
+++ b/styles.css
@@ -40,28 +40,43 @@ a {
 .headline {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    margin-left: 20px;
 }
 
 #logo {
     display: flex;
-    margin-top: 50px;
+    margin-top: 80px;
     margin-right: 20px;
     width: 350px;
     margin-top: 50px;
 }
 
 h1 {
-    margin-top: 100px;
+    margin-top: 80px;
     font-size: 48px;
     font-weight: 900;
     margin-bottom: 0;
+    margin-left: 50px;
 }
 
 h2 {
-    margin: 0;
+    margin-top: 0;
     font-size: 18px;
+    margin-left: 50px;
 }
 
 #btone {
     background-color: #3882F6;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    margin-left: 50px;
+    border: none;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    color: white;
+    border-radius: 8px;
 };
